tests/NormalTests/paczka1/small_fuzzy/44804620.err
Error in line 10: ewwHhksF S595 -2,9
Error in line 3: qQiT A969 29,0
